--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="header">
     <h1 class="title">Welcome to the Tasty Notebook</h1>
     <p class="sub-title">You can create your own recipes from scratch</p>
-    <button class="create-recipe">Create Recipe</button>
+    <button class="create-recipe default-btn">Create Recipe</button>
   </header>
   <main class="main">
     <div class="recipe">
