partially added header for recipe

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <main class="main">
     <div class="recipe">
       <header class="recipe-header">
-        <img src="imgs/recipes/pexels-anna-guerrero-788383-4079522.jpg" alt="lasagna">
+        
+          <img src="imgs/recipes/recipe1.jpg" alt="lasagna" class="recipe-img">
+       
         <h2 class="recipe-name">Lasagna</h2>
         <div class="divider"></div>
         <div class="rating">
