recipe header complete

--- a/index.html
+++ b/index.html
@@ -20,31 +20,35 @@
           <img src="imgs/recipes/recipe1.jpg" alt="lasagna" class="recipe-img">
        
         <h2 class="recipe-name">Lasagna</h2>
-        <div class="divider"></div>
-        <div class="rating">
-          <img src="https://img.icons8.com/?size=100&id=85389&format=png&color=d9534f" alt="star rating">
+        <hr class="divider"></hr>
+        <div class="ratings">
+          <img src="https://img.icons8.com/?size=100&id=85389&format=png&color=d9534f" alt="star rating" class="star-rating">
+          <img src="https://img.icons8.com/?size=100&id=85389&format=png&color=d9534f" alt="star rating" class="star-rating">
+          <img src="https://img.icons8.com/?size=100&id=85389&format=png&color=d9534f" alt="star rating" class="star-rating">
+          <img src="https://img.icons8.com/?size=100&id=85389&format=png&color=d9534f" alt="star rating" class="star-rating">
+          <img src="https://img.icons8.com/?size=100&id=85389&format=png&color=d9534f" alt="star rating" class="star-rating">
         </div>
-        <p class="number-reviews">5 from 76 reviews</p>
+        <p class="number-reviews"><span class="emphasis">5</span> from <span class="emphasis">76</span> reviews</p>
         <aside class="recipe-details">
           <div class="recipe-detail">
-            <img src="#" alt="Author icon">
-            <p class="author">Author: Nagi</p>
+            <ion-icon name="person" class="recipe-icon"></ion-icon>
+            <p class="recipe-more-dets">Author: Nagi</p>
           </div>
           <div class="recipe-detail">
-            <img src="#" alt="Clock icon">
-            <p class="prep-time">Prep: 20 mins</p>
+            <ion-icon name="time" class="recipe-icon"></ion-icon>
+            <p class="recipe-more-dets">Prep: 20 mins</p>
           </div>
           <div class="recipe-detail">
-            <img src="#" alt="Clock icon">
-            <p class="cook-time">Cook: 2 hrs 15 mins</p>
+            <ion-icon name="time" class="recipe-icon"></ion-icon>
+            <p class="recipe-more-dets">Cook: 2 hrs 15 mins</p>
           </div>
           <div class="recipe-detail">
-            <img src="#" alt="Utensils icon">
-            <p class="author">Author: Nagi</p>
+            <ion-icon name="restaurant" class="recipe-icon"></ion-icon>
+            <p class="recipe-more-dets">Author: Nagi</p>
           </div>
           <div class="recipe-detail">
-            <img src="#" alt="Globe icon">
-            <p class="food-type">Italian</p>
+            <ion-icon name="earth" class="recipe-icon"></ion-icon>
+            <p class="recipe-more-dets">Italian</p>
           </div>
         </aside>
         
@@ -116,6 +120,7 @@
       </div>
     </div>
   </main>
-  
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
