added ingredients section

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
       </header>
       <div class="ingredients">
         <h3 class="ingredients-label">Ingredients</h3>
-        <p class="servings">Servings: 4 people</p>
+        <p class="servings">Servings: <span class="emphasis">4</span> people</p>
         <div class="ingredient-sets">
           <div class="ingredient-set">
-            <p class="set label">Beef and Brocolli Ingredients:</p>
+            <p class="set-label">Beef and Brocolli Ingredients:</p>
             <div class="ingredient">
               <input type="checkbox">
               <p class="ingredient-p">1lb flank steak, very thinly sliced into bite-sized strips</p>
@@ -77,7 +77,7 @@
             </div>
           </div>
           <div class="ingredient-set">
-            <p class="set label">Beef and Brocolli Ingredients:</p>
+            <p class="set-label">Beef and Brocolli Ingredients:</p>
             <div class="ingredient">
               <input type="checkbox">
               <p class="ingredient-p">1lb flank steak, very thinly sliced into bite-sized strips</p>
