added custom checkbox style

--- a/index.html
+++ b/index.html
@@ -59,41 +59,42 @@
         <div class="ingredient-sets">
           <div class="ingredient-set">
             <p class="set-label">Beef and Brocolli Ingredients:</p>
-            <div class="ingredient">
-              <input type="checkbox">
+            <label class="ingredient">
+              <input type="checkbox" class="ingredient-checkbox checkbox-reset" >
               <p class="ingredient-p">1lb flank steak, very thinly sliced into bite-sized strips</p>
-            </div>
-            <div class="ingredient">
-              <input type="checkbox">
+            </label>
+            <label class="ingredient">
+              <input type="checkbox" class="ingredient-checkbox checkbox-reset" >
               <p class="ingredient-p">1lb flank steak, very thinly sliced into bite-sized strips</p>
-            </div>
-            <div class="ingredient">
-              <input type="checkbox">
+            </label>
+            <label class="ingredient">
+              <input type="checkbox" class="ingredient-checkbox checkbox-reset" >
               <p class="ingredient-p">1lb flank steak, very thinly sliced into bite-sized strips</p>
-            </div>
-            <div class="ingredient">
-              <input type="checkbox">
+            </label>
+            <label class="ingredient">
+              <input type="checkbox" class="ingredient-checkbox checkbox-reset" >
               <p class="ingredient-p">1lb flank steak, very thinly sliced into bite-sized strips</p>
-            </div>
+            </label>
+            
           </div>
           <div class="ingredient-set">
             <p class="set-label">Beef and Brocolli Ingredients:</p>
-            <div class="ingredient">
-              <input type="checkbox">
+            <label class="ingredient">
+              <input type="checkbox" class="ingredient-checkbox checkbox-reset" >
               <p class="ingredient-p">1lb flank steak, very thinly sliced into bite-sized strips</p>
-            </div>
-            <div class="ingredient">
-              <input type="checkbox">
+            </label>
+            <label class="ingredient">
+              <input type="checkbox" class="ingredient-checkbox checkbox-reset" >
               <p class="ingredient-p">1lb flank steak, very thinly sliced into bite-sized strips</p>
-            </div>
-            <div class="ingredient">
-              <input type="checkbox">
+            </label>
+            <label class="ingredient">
+              <input type="checkbox" class="ingredient-checkbox checkbox-reset" >
               <p class="ingredient-p">1lb flank steak, very thinly sliced into bite-sized strips</p>
-            </div>
-            <div class="ingredient">
-              <input type="checkbox">
+            </label>
+            <label class="ingredient">
+              <input type="checkbox" class="ingredient-checkbox checkbox-reset" >
               <p class="ingredient-p">1lb flank steak, very thinly sliced into bite-sized strips</p>
-            </div>
+            </label>
           </div>
         </div>
       </div>
