added create recipe floating button with tooltip

--- a/index.html
+++ b/index.html
@@ -217,11 +217,26 @@
         </div>
       </div>
     </main>
+    <button
+      class="floating-create-recipe default-btn"
+      data-text="Create your own recipe"
+    >
+      <ion-icon name="add-circle" class="plus-icon"></ion-icon>
+    </button>
+
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
     ></script>
 
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
     <script
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
