added edit and delete buttons

--- a/index.html
+++ b/index.html
@@ -215,6 +215,15 @@
             </div>
           </div>
         </div>
+        <div class="important-icons">
+          <button class="important-btn default-btn">
+            <ion-icon name="create-outline" class="important-icon edit-icon"></ion-icon>
+          </button>
+
+          <button class="important-btn default-btn">
+            <ion-icon name="trash-outline" class="important-icon delete-icon"></ion-icon>
+          </button>
+        </div>
       </div>
     </main>
     <button
