first html form

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               </div>
               <div class="recipe-detail">
                 <ion-icon name="restaurant" class="recipe-icon"></ion-icon>
-                <p class="recipe-more-dets">Author: Nagi</p>
+                <p class="recipe-more-dets">Mains</p>
               </div>
               <div class="recipe-detail">
                 <ion-icon name="earth" class="recipe-icon"></ion-icon>
@@ -217,11 +217,17 @@
         </div>
         <div class="important-icons">
           <button class="important-btn default-btn">
-            <ion-icon name="create-outline" class="important-icon edit-icon"></ion-icon>
+            <ion-icon
+              name="create-outline"
+              class="important-icon edit-icon"
+            ></ion-icon>
           </button>
 
           <button class="important-btn default-btn">
-            <ion-icon name="trash-outline" class="important-icon delete-icon"></ion-icon>
+            <ion-icon
+              name="trash-outline"
+              class="important-icon delete-icon"
+            ></ion-icon>
           </button>
         </div>
       </div>
@@ -232,6 +238,51 @@
     >
       <ion-icon name="add-circle" class="plus-icon"></ion-icon>
     </button>
+    <div class="create-recipe-container">
+      <h1>Create A Recipe</h1>
+      <div>
+        <h2>Basic Info</h2>
+        <form action="">
+          <label for="" class="create-form-label">Name of Recipe</label>
+          <input type="text" />
+          <label for="" class="create-form-label">Author</label>
+          <input type="text" />
+          <div>
+            <div>
+              <label for="" class="create-form-label">Prep Time</label>
+              <input type="time" />
+            </div>
+            <div>
+              <label for="" class="create-form-label">Prep Time</label>
+              <input type="time" />
+            </div>
+          </div>
+          <div>
+            <div>
+              <label for="" class="create-form-label"></label>
+              <select name="" id="">
+                <option value="">Mains</option>
+                <option value="">Mains</option>
+                <option value="">Mains</option>
+                <option value="">Mains</option>
+              </select>
+            </div>
+            <div>
+              <label for="" class="create-form-label"></label>
+              <select name="" id="">
+                <option value="">Mains</option>
+                <option value="">Mains</option>
+                <option value="">Mains</option>
+                <option value="">Mains</option>
+              </select>
+            </div>
+          </div>
+          <div>
+            <button>Next &#8594;</button>
+          </div>
+        </form>
+      </div>
+    </div>
 
     <script
       type="module"
