--- a/index.html
+++ b/index.html
@@ -518,11 +518,15 @@
             </button>
           </div>
 
-          <button class="add-set default-btn">
-            <ion-icon name="add"></ion-icon>
+          <button class="add-set-btn default-btn">
+            <ion-icon name="add" class="add-set-icon"></ion-icon>
             <p>Add Set</p>
           </button>
         </div>
+        <button class="next-btn default-btn reset-focus">
+          Next
+          <ion-icon name="arrow-forward-outline"></ion-icon>
+        </button>
       </form>
     </div>
     <div class="form-overlay"></div>
