added some styles to create ingredients

--- a/index.html
+++ b/index.html
@@ -406,16 +406,19 @@
                   type="number"
                   class="create-input ingredient-qty-input"
                 />
-                <select
-                  name="measurement-0"
-                  id="measurement-0"
-                  class="create-input create-input-dropdown measurement-input"
-                >
-                  <option value="cup">cup</option>
-                  <option value="cup">Charizard</option>
-                  <option value="cup">Mega Lucario</option>
-                  <option value="cup">Mega Sprigatitto</option>
-                </select>
+                <div class="custom-select">
+                  <select
+                    name="measurement-0"
+                    id="measurement-0"
+                    class="create-input create-input-dropdown measurement-input"
+                  >
+                    <option value="cup">cup</option>
+                    <option value="cup">Charizard</option>
+                    <option value="cup">Mega Lucario</option>
+                    <option value="cup">Mega Sprigatitto</option>
+                  </select>
+                </div>
+
                 <input
                   type="text"
                   class="create-input"
@@ -479,16 +482,18 @@
                   type="number"
                   class="create-input ingredient-qty-input"
                 />
-                <select
-                  name="measurement-0"
-                  id="measurement-0"
-                  class="create-input create-input-dropdown measurement-input"
-                >
-                  <option value="cup">cup</option>
-                  <option value="cup">Charizard</option>
-                  <option value="cup">Mega Lucario</option>
-                  <option value="cup">Mega Sprigatitto</option>
-                </select>
+                <div class="custom-select">
+                  <select
+                    name="measurement-0"
+                    id="measurement-0"
+                    class="create-input create-input-dropdown measurement-input"
+                  >
+                    <option value="cup">cup</option>
+                    <option value="cup">Charizard</option>
+                    <option value="cup">Mega Lucario</option>
+                    <option value="cup">Mega Sprigatitto</option>
+                  </select>
+                </div>
                 <input
                   type="text"
                   class="create-input"
