create instructions styles added

--- a/index.html
+++ b/index.html
@@ -371,7 +371,8 @@
           Next
           <ion-icon name="arrow-forward-outline"></ion-icon>
         </button> -->
-        <div class="ingredient-sets-input">
+
+        <!-- <div class="ingredient-sets-input">
           <div class="ingredient-set">
             <header class="upper-container">
               <div class="set-name-container">
@@ -531,19 +532,82 @@
         <button class="next-btn default-btn reset-focus">
           Next
           <ion-icon name="arrow-forward-outline"></ion-icon>
+        </button> -->
+
+        <div class="instructions-input-container">
+          <div class="instruction-input-container">
+            <textarea
+              name="instruction-0"
+              id="instruction-0"
+              class="instruction-input create-input reset-focus reset-textarea"
+            ></textarea>
+            <button class="delete-instruction-btn default-btn">
+              <ion-icon
+                name="trash-outline"
+                class="delete-instruction-icon"
+              ></ion-icon>
+            </button>
+          </div>
+          <div class="instruction-input-container">
+            <textarea
+              name="instruction-0"
+              id="instruction-0"
+              class="instruction-input create-input reset-focus reset-textarea"
+            ></textarea>
+            <button class="delete-instruction-btn default-btn">
+              <ion-icon
+                name="trash-outline"
+                class="delete-instruction-icon"
+              ></ion-icon>
+            </button>
+          </div>
+          <div class="instruction-input-container">
+            <textarea
+              name="instruction-0"
+              id="instruction-0"
+              class="instruction-input create-input reset-focus reset-textarea"
+            ></textarea>
+            <button class="delete-instruction-btn default-btn">
+              <ion-icon
+                name="trash-outline"
+                class="delete-instruction-icon"
+              ></ion-icon>
+            </button>
+          </div>
+          <div class="instruction-input-container">
+            <textarea
+              name="instruction-0"
+              id="instruction-0"
+              class="instruction-input create-input reset-focus reset-textarea"
+            ></textarea>
+            <button class="delete-instruction-btn default-btn">
+              <ion-icon
+                name="trash-outline"
+                class="delete-instruction-icon"
+              ></ion-icon>
+            </button>
+          </div>
+          <div class="instruction-input-container">
+            <textarea
+              name="instruction-0"
+              id="instruction-0"
+              class="instruction-input create-input reset-focus reset-textarea"
+            ></textarea>
+            <button class="delete-instruction-btn default-btn">
+              <ion-icon
+                name="trash-outline"
+                class="delete-instruction-icon"
+              ></ion-icon>
+            </button>
+          </div>
+        </div>
+        <button class="next-btn default-btn reset-focus">
+          Next
+          <ion-icon name="arrow-forward-outline"></ion-icon>
         </button>
       </form>
     </div>
     <div class="form-overlay"></div>
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-    ></script>
-
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-    ></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
