added add instruction btn

--- a/index.html
+++ b/index.html
@@ -600,6 +600,10 @@
               ></ion-icon>
             </button>
           </div>
+          <button class="add-instruction-btn default-btn">
+            <ion-icon name="add" class="add-instruction-icon"></ion-icon>
+            <p>Add Instruction</p>
+          </button>
         </div>
         <button class="next-btn default-btn reset-focus">
           Next
