added forms for nutrition

--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
           <ion-icon name="arrow-forward-outline"></ion-icon>
         </button> -->
 
-        <div class="instructions-input-container">
+        <!-- <div class="instructions-input-container">
           <div class="instruction-input-container">
             <textarea
               name="instruction-0"
@@ -608,7 +608,70 @@
         <button class="next-btn default-btn reset-focus">
           Next
           <ion-icon name="arrow-forward-outline"></ion-icon>
-        </button>
+        </button> -->
+        <div class="nutrition-inputs-container">
+          <div class="nutrition-input-container">
+            <label
+              for="nutrition-calories"
+              class="nutrition-input-label create-input-label"
+              >Calories</label
+            >
+            <div class="nutrition-input">
+              <input
+                type="number"
+                class="nutrition-qty-input create-input"
+                id="nutrition-calories"
+              />
+              <p class="nutrition-measurement">kcal</p>
+            </div>
+          </div>
+          <div class="nutrition-input-container">
+            <label
+              for="nutrition-carbs"
+              class="nutrition-input-label create-input-label"
+              >Carbohydrates</label
+            >
+            <div class="nutrition-input">
+              <input
+                type="number"
+                class="nutrition-qty-input create-input"
+                id="nutrition-carbs"
+              />
+              <p class="nutrition-measurement">g</p>
+            </div>
+          </div>
+          <div class="nutrition-input-container">
+            <label
+              for="nutrition-protein"
+              class="nutrition-input-label create-input-label"
+              >Protein</label
+            >
+            <div class="nutrition-input">
+              <input
+                type="number"
+                class="nutrition-qty-input create-input"
+                id="nutrition-protein"
+              />
+              <p class="nutrition-measurement">g</p>
+            </div>
+          </div>
+          <div class="nutrition-input-container">
+            <label
+              for="nutrition-fat"
+              class="nutrition-input-label create-input-label"
+              >Fat</label
+            >
+            <div class="nutrition-input">
+              <input
+                type="number"
+                class="nutrition-qty-input create-input"
+                id="nutrition-fat"
+              />
+              <p class="nutrition-measurement">g</p>
+            </div>
+          </div>
+        </div>
+        <button class="next-btn default-btn reset-focus">Submit</button>
       </form>
     </div>
     <div class="form-overlay"></div>
